# my_project_template

cpp_template/: CMakeLists.txt
cpp_template/modules/example/: CMakeLists.txt
cpp_template/modules/example/include/: hello.hpp
cpp_template/modules/example/src/: hello.cpp
cpp_template/src/: main.cpp
